--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="feature">
             <span class="icon">🚚</span>
             <h3>Frete Grátis</h3>
-            <p>Natal e Parnamirim</p>
+            <p>Para todo o Brasil</p>
         </div>
         <div class="feature">
             <span class="icon">⭐</span>
@@ -46,6 +46,11 @@
             <span class="icon">🔒</span>
             <h3>Compra Segura</h3>
             <p>Pagamento protegido</p>
+        </div>
+        <div class="feature">
+            <span class="icon">↩️</span>
+            <h3>30 Dias</h3>
+            <p>Para troca ou devolução</p>
         </div>
     </section>
 
@@ -64,7 +69,7 @@
                         <div class="stock-bar">
                             <div class="stock-level" style="width: 75%"></div>
                         </div>
-                        <p>Restam apenas 15 unidades</p>
+                        <p>Restam apenas 25 unidades</p>
                     </div>
                     <button class="buy-button">Adicionar ao Carrinho</button>
                 </div>
@@ -82,7 +87,7 @@
                         <div class="stock-bar">
                             <div class="stock-level" style="width: 85%"></div>
                         </div>
-                        <p>Restam apenas 20 unidades</p>
+                        <p>Restam apenas 30 unidades</p>
                     </div>
                     <button class="buy-button">Adicionar ao Carrinho</button>
                 </div>
@@ -100,7 +105,7 @@
                         <div class="stock-bar">
                             <div class="stock-level" style="width: 65%"></div>
                         </div>
-                        <p>Restam apenas 18 unidades</p>
+                        <p>Restam apenas 30 unidades</p>
                     </div>
                     <button class="buy-button">Adicionar ao Carrinho</button>
                 </div>
@@ -118,7 +123,7 @@
                         <div class="stock-bar">
                             <div class="stock-level" style="width: 45%"></div>
                         </div>
-                        <p>Últimas 12 unidades!</p>
+                        <p>Últimas 25 unidades!</p>
                     </div>
                     <button class="buy-button">Adicionar ao Carrinho</button>
                 </div>
@@ -148,7 +153,17 @@
                     </div>
                 </div>
             </div>
-            
+            <div class="review-card">
+                <div class="stars">⭐⭐⭐⭐⭐</div>
+                <p>"Comprei para o festival do ano passado e até hoje uso. Vale cada centavo!"</p>
+                <div class="reviewer">
+                    <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?auto=format&fit=crop&q=80&w=100" alt="Cliente">
+                    <div>
+                        <h4>Maria Santos</h4>
+                        <p>Cliente Verificado ✓</p>
+                    </div>
+                </div>
+            </div>
             <div class="review-card">
                 <div class="stars">⭐⭐⭐⭐⭐</div>
                 <p>"Design incrível e acabamento perfeito. Já comprei todos os modelos!"</p>
