--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="feature">
             <span class="icon">🚚</span>
             <h3>Frete Grátis</h3>
-            <p>Para todo o Brasil</p>
+            <p>Natal e Parnamirim</p>
         </div>
         <div class="feature">
             <span class="icon">⭐</span>
@@ -46,11 +46,6 @@
             <span class="icon">🔒</span>
             <h3>Compra Segura</h3>
             <p>Pagamento protegido</p>
-        </div>
-        <div class="feature">
-            <span class="icon">↩️</span>
-            <h3>30 Dias</h3>
-            <p>Para troca ou devolução</p>
         </div>
     </section>
 
@@ -149,17 +144,6 @@
                     <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?auto=format&fit=crop&q=80&w=100" alt="Cliente">
                     <div>
                         <h4>João Silva</h4>
-                        <p>Cliente Verificado ✓</p>
-                    </div>
-                </div>
-            </div>
-            <div class="review-card">
-                <div class="stars">⭐⭐⭐⭐⭐</div>
-                <p>"Comprei para o festival do ano passado e até hoje uso. Vale cada centavo!"</p>
-                <div class="reviewer">
-                    <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?auto=format&fit=crop&q=80&w=100" alt="Cliente">
-                    <div>
-                        <h4>Maria Santos</h4>
                         <p>Cliente Verificado ✓</p>
                     </div>
                 </div>
